RESOLVED FIXED47833
Strict mode: |this| should be undefined if it is not explicitly provided
https://bugs.webkit.org/show_bug.cgi?id=47833
Summary Strict mode: |this| should be undefined if it is not explicitly provided
Oliver Hunt
Reported 2010-10-18 10:06:07 PDT
Strict mode: |this| should be undefined if it is not explicitly provided
Attachments
Patch (7.19 KB, patch)
2010-10-18 10:18 PDT, Oliver Hunt
darin: review+
Oliver Hunt
Comment 1 2010-10-18 10:18:18 PDT
Oliver Hunt
Comment 2 2010-10-18 11:32:56 PDT
WebKit Review Bot
Comment 3 2010-10-18 12:22:26 PDT
http://trac.webkit.org/changeset/69977 might have broken Leopard Intel Release (Tests) The following tests are not passing: fast/workers/storage/interrupt-database-sync.html media/video-zoom.html
Note You need to log in before you can comment on or make changes to this bug.